tests/fsharp/typecheck/sigs/neg29.bsl

neg29.fs(5,19,6,16): parse error FS0010: Incomplete structured construct at or before this point in type name. Expected '>' or other token.

neg29.fs(9,1,9,1): parse error FS0010: Incomplete structured construct at or before this point in implementation file
